Corrects spacing

--- a/app/assets/stylesheets/devise/registrations-new.sass
+++ b/app/assets/stylesheets/devise/registrations-new.sass
@@ -24,4 +24,4 @@
 		font-size: 0.8em
 
 	.alert-danger
-		margin-bottom: 0
+		margin-bottom: 20px
